--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "expo": "~51.0.17",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.74.2",
+    "react-native-material-textfield": "^0.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-material-textfield": "^0.16.10",
     "typescript": "^5.1.3"
   },
   "private": true
